subindo atualização com o sid

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-./backend/node_modules
-./backend/.env
-./backend/.env.test
-./backend/prisma/dev.db
-./backend/prisma/test.db
+backend/node_modules
+backend/.env
+backend/.env.test
+backend/prisma/dev.db
+backend/prisma/test.db
 .cursor
+frontend/node_modules
