adiciona tela de registro login e landingPage

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "react": "^18.3.1",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "@heroicons/react": "^2.1.1",
-    "react-calendar": "^4.8.0",
-    "recharts": "^2.12.2",
-    "@headlessui/react": "^1.7.18"
+    "recharts": "^2.12.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
