--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "axios": "^1.8.4",
     "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-calendar": "^4.8.0",
