--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-calendar": "^4.8.0",
